--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="libs/mysql-connector-j-8.0.32.jar"/>
 	<classpathentry kind="lib" path="libs/stax-ex-1.8.jar"/>
 	<classpathentry kind="lib" path="libs/txw2-2.3.1.jar"/>
+	<classpathentry kind="lib" path="libs/postgresql-42.6.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
